--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-public/favicon.ico filter=lfs diff=lfs merge=lfs -text
-public/font filter=lfs diff=lfs merge=lfs -text
-public/logos filter=lfs diff=lfs merge=lfs -text
+public/** filter=lfs diff=lfs merge=lfs -text
