--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
-    "name": "react-photo-sphere-viewer",
-    "version": "1.0.0",
-    "description": "",
-    "keywords": [],
-    "main": "src/app.jsx",
-    "dependencies": {
-        "@photo-sphere-viewer/core": "5.13.2",
-        "@photo-sphere-viewer/markers-plugin": "5.13.2",
-        "photo-sphere-viewer-lensflare-plugin": "2.1.4",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
-        "react-photo-sphere-viewer": "latest",
-        "react-router-dom": "^6.30.2",
-        "react-scripts": "5.0.1"
-    },
-    "devDependencies": {
-        "@babel/runtime": "7.13.8",
-        "typescript": "4.1.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+  "name": "nhl-stenden-explorer",
+  "private": true,
+  "scripts": {
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start:server": "node server/index.js"
+  },
+  "dependencies": {
+    "@photo-sphere-viewer/core": "^5.13.2",
+    "@photo-sphere-viewer/markers-plugin": "^5.13.2",
+    "photo-sphere-viewer-lensflare-plugin": "^2.1.4",
+    "react-photo-sphere-viewer": "*",
+    "framer-motion": "^12.23.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.1",
+    "vite": "^5.1.0",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "cors": "^2.8.5"
+  }
 }
